kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-backend
  labels:
    app: ecommerce-backend
spec:
  replicas: 1
  # Vì chúng ta dùng t3.micro, hãy dùng Recreate để tránh bị treo IP như nãy
  strategy:
    type: Recreate 
  selector:
    matchLabels:
      app: ecommerce-backend
  template:
    metadata:
      labels:
        app: ecommerce-backend
    spec:
      serviceAccountName: ecommerce-sa # Sử dụng SA đã gắn IRSA
      containers:
      - name: backend-app
        # Thay bằng tên Image bạn đã đẩy lên Docker Hub ở Bước 6
        image: galaxyeye107/ecommerce-backend:latest
        ports:
        - containerPort: 8080
        # Bóp tài nguyên để chạy vừa khít trên t3.micro
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
