kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend-service
spec:
  selector:
    app: ecommerce-backend
  ports:
    - protocol: TCP
      port: 80 # Cổng bên ngoài gọi vào
      targetPort: 8080 # Cổng của ứng dụng Spring Boot
  type: ClusterIP # Chỉ cho phép gọi nội bộ trong Cluster (An toàn)
