kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-frontend
  template:
    metadata:
      labels:
        app: ecommerce-frontend
    spec:
      containers:
      - name: frontend
        image: galaxyeye107/ecommerce-frontend:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "50m"
            memory: "32Mi"
          limits:
            cpu: "100m" 
            memory: "64Mi" # Frontend thường nhẹ hơn, nên bóp tài nguyên nhỏ hơn để chạy mượt trên t3.micro
      
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend-service
spec:
  selector:
    app: ecommerce-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
