kubernetes/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service # Tên này phải khớp với SPRING_DATASOURCE_URL trong Backend
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: init-scripts
          mountPath: /docker-entrypoint-initdb.d # Thư mục tự động chạy SQL của MySQL
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
      volumes:
      - name: init-scripts
        configMap:
          name: mysql-init-scripts
