kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mysql # Áp dụng luật này cho Pod có nhãn app: mysql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ecommerce-backend # CHỈ cho phép Pod có nhãn này đi vào
    ports:
    - protocol: TCP
      port: 3306 # Chỉ mở đúng cổng của MySQL
